mrpt (1:2.0.2-1) unstable; urgency=medium

  * New version of upstream sources.
  * Updated debian/control to fix missing libraries.
  * Fix build against OpenCV 4 (Closes: #922586)
  * Do not use Python2 anymore (Closes: #943188)

 -- José Luis Blanco Claraco <joseluisblancoc@gmail.com>  Mon, 04 May 2020 16:55:51 +0200

mrpt (1:1.5.8-1) unstable; urgency=medium

  * New version of upstream sources.

 -- José Luis Blanco Claraco <joseluisblancoc@gmail.com>  Sat, 12 Oct 2019 17:29:20 +0200

mrpt (1:1.5.6-1) unstable; urgency=medium

  * New version of upstream sources.

 -- José Luis Blanco Claraco <joseluisblancoc@gmail.com>  Tue, 24 Apr 2018 08:23:18 +0200

mrpt (1:1.5.5-1) unstable; urgency=medium

  * New version of upstream sources.
  * Fix SIGBUS in armhf (Closes: #880388).
  * debian/copyright: Updated to machine-readable format.
  * debian/rules: disable generating Doxygen caller graphs in doc pkg.
  * debian/rules: provide build-indep, test-indep, and install-indep targets.

 -- José Luis Blanco Claraco <joseluisblancoc@gmail.com>  Fri, 01 Dec 2017 07:13:14 +0100

mrpt (1:1.5.3-1) unstable; urgency=medium

  * New version of upstream sources.
  * Add signature checking to watch file (fix lintian
    debian-watch-may-check-gpg-signature).
  * Fix GCC hardening flags (Closes: #865735).
  * Fix lintian error license-problem-convert-utf-code.
  * Builds with GCC 7 (Closes: #853563).
  * Remove all debian/patches as they are integrated upstream.
  * debian/copyright: Updated sinceEigen, assimp and octomap are no longer
    shipped in upstream releases.
  * debian/control: Simplify Build-Depends. The previous version was intended
    to be used on both Ubuntu and Debian, but we don't really want several
    alternative ways to build the same package.
  * debian/control: Add "Multi-Arch: same" to library packages.
  * debian/control: Drop obsolete usage of "misc:Pre-Depends" variable.
  * debian/rules: Disable DH_{DEBUG,VERBOSE}.
